@@ -107,6 +107,12 @@ us a note on ns-developers mailing list.</p>
           access, and handover.</li>
     </ul>
   </li>
+  <li>A new parallel scheduling algorithm based on null messages, a common 
+  parallel DES scheduling algorithm, has been added.  The null message 
+  scheduler has better scaling properties when running on some scenarios
+  with large numbers of nodes since it does not require a global 
+  communication.
+  </li>
 </ul>
 
 <h2>Changes to existing API:</h2>
@@ -136,6 +142,10 @@ us a note on ns-developers mailing list.</p>
     RRC protocol.</li>
   <li> UE RRC state model in LTE module has been considerably modified and is
     not backward compatible with the previous state model.</li>
+  <li> Additional time units (Year, Day, Hour, Minute) were added to the time
+  value class that represents simulation time; the largest unit prior to 
+  this addition was Second.
+  </li>
 </ul>
 
 <h2>Changes to build system:</h2>
